; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/tools/extr_certs.c_get_cert_signer_algo.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/tools/extr_certs.c_get_cert_signer_algo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"ERROR: certificate decoding failed with error %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_cert_signer_algo(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %6 = call i32 @br_x509_decoder_init(i32* %4, i32 0, i32 0)
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @br_x509_decoder_push(i32* %4, i32 %9, i32 %12)
  %14 = call i32 @br_x509_decoder_last_error(i32* %4)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %1
  %18 = load i32, i32* @stderr, align 4
  %19 = load i32, i32* %5, align 4
  %20 = sub nsw i32 0, %19
  %21 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i32 %20)
  store i32 0, i32* %2, align 4
  br label %24

22:                                               ; preds = %1
  %23 = call i32 @br_x509_decoder_get_signer_key_type(i32* %4)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %17
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @br_x509_decoder_init(i32*, i32, i32) #1

declare dso_local i32 @br_x509_decoder_push(i32*, i32, i32) #1

declare dso_local i32 @br_x509_decoder_last_error(i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @br_x509_decoder_get_signer_key_type(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
